# docstring-linter

./: .codecov.yml  .commitlintrc.js  .commitlintrc.mjs  .gitignore  .pre-commit-config-hook.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vulture  CLAUDE.md  README.md  RELEASE.md  RULES.md  TESTS.md  TODO.md  WORKFLOW.md  action.yml  pyproject.toml  pyrightconfig.json
.claude/commands/: commit-title.md  create-pull-request.md  suggest-commit-title.md
.devcontainer/: .env-example  devcontainer.json
.github/: dependabot.yml
.github/workflows/: action.yml  build.yml  ci.yml  lint.yml  pr.yml  publish-release.yml  pull-request-validation.yml  release.yml  tests.yml
example/: __init__.py  docstring_format_reference.py
scripts/: README.md  check-develop.sh  common.sh  install.sh  lint-application.sh  lint-common.sh  lint-tests.sh  sync-develop.sh
src/linter/: __init__.py  ast_parser.py  cli.py  config.py  docstring_parser.py  models.py  reporter.py
src/linter/rules/: __init__.py  _base.py  args.py  attributes.py  docstring.py  structure.py
tests/linter/: test_ast_parser.py  test_cli.py  test_config.py  test_docstring_parser.py  test_integration.py  test_models.py  test_reporter.py
tests/linter/rules/: conftest.py  test_rules_args.py  test_rules_attributes.py  test_rules_docstring.py  test_rules_structure.py  test_rules_validate.py
